# gerenciador_tarefas

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tarefas.db
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_api.py
