[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "gui-olperes",email = "peres.gui0611@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.95.0"
uvicorn = "^0.18.0"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"